welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: missing arguments for method fill in object Array;
follow this method with `_' if you want to treat it as a partially applied function
  var t = Array.fill(num)
                    ^